-------------------------------------------------------------------
Fri Feb 15 22:14:11 CET 2008 - cfarrell@suse.de

- Fixed bugs in output.py which constantly set last_y to 0 even
  if a suitable coordinate was found

-------------------------------------------------------------------
Fri Feb 15 17:19:44 CET 2008 - cfarrell@suse.de

- Fixed bugs in analyse module. It is now compatible with ocrocol.pl
- Fixed code to determine where paragraphs and line breaks occur
- This check-in should actually be quite usable. See test.py

-------------------------------------------------------------------
Fri Feb 15 10:28:19 CET 2008 - cfarrell@suse.de

- Refactored code out to responsible modules
- Added strip() code to output.py to add <br/> to the end of 
  content lines (will probably have to look at css later) 

-------------------------------------------------------------------
Wed Feb 13 15:21:59 CET 2008 - cfarrell@suse.de

- Added bootstrap classes for analysis and output 

-------------------------------------------------------------------
Wed Feb 13 13:34:28 CET 2008 - cfarrell@suse.de

- Positional information now output to a list and min and max 
  calculated (izip and operator required)
- Evaluating jw's spectrum analyser (perl) to calculate distribution
  of list values 

-------------------------------------------------------------------
Tue Feb 12 17:54:09 CET 2008 - cfarrell@suse.de

- Starting to parse the positional information output by ocropus
  which isn't going to be easy - some statistical analysis is needed
- See th

2008-02-12, cfarrell:

- changed default dpi of pdftoimages from 150 to 300

2008-02-11, cfarrell:

- imported code from now extinct project py-ocr-helper
- added testSetup() frame for checking environment before starting
- added README file with installation and usage instructions
- added this CHANGES document
- added support for html2txt